--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="jQbKbD7eDb-1hkT2w3Isi1Xihewa8qVWFUHqXkPvNnE" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Junaid | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Portfolio of Junaid Ahmad, a web developer." />
+  <meta name="keywords" content="Junaid, Junaid Ahmad, Junaid Co, Junaid developer" />
+  <meta name="author" content="Junaid Ahmad" />
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Junaid | Portfolio">
@@ -36,6 +38,22 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="application/ld+json">
+    {`
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Junaid Ahmad",
+        "jobTitle": "Developer",
+        "url": "https://junaid.co.in",
+        "sameAs": [
+          "https://twitter.com/yourprofile",
+          "https://www.linkedin.com/in/junaidahmadcse/"
+        ]
+      }
+    `}
+  </script>
+  
 </body>
 
 </html>
